--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
-    "name": "TabOrgani",
+    "name": "Taporazzi",
     "version": "1.0.0",
     "description": "A tab organizer for our favorite, Microsoft Edge",
     "author": "Homunculi",
     "icons": {
-       "16": "icons/icon_16.png",
-       "32": "icons/icon_32.png",
-       "48": "icons/icon_48.png",
-       "128": "icons/icon_128.png"
+       "16": "icons/icon_ti_16.png",
+       "32": "icons/icon_ti_32.png",
+       "48": "icons/icon_ti_48.png",
+       "128": "icons/icon_ti_128.png"
     },
     "browser_action": {
         "default_icon": {
-            "20": "icons/icon_20.png",
-            "25": "icons/icon_25.png",
-            "30": "icons/icon_30.png",
-            "40": "icons/icon_40.png"
+            "20": "icons/icon_ti_20.png",
+            "25": "icons/icon_ti_25.png",
+            "30": "icons/icon_ti_30.png",
+            "40": "icons/icon_ti_40.png"
         },
-        "default_title": "TabOrgani",
+        "default_title": "Taporazzi",
         "default_popup":"listTile.html"
     },
     "permissions": [
